webui/style.css
/*!
 * This file is part of nzbget
 *
 * Copyright (C) 2012-2014 Andrey Prygunkov <hugbug@users.sourceforge.net>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 *
 * $Revision$
 * $Date$
 *
 */

body {
	padding-left: 0;
	padding-right: 0;
}

/* NAVBAR */
.navbar-fixed-top {
    margin-bottom: 18px;
	margin-left: 0px;
	margin-right: 0px;
	position: static;
}

.navbar-fixed-top .navbar-inner {
	padding: 0;
	min-height: 0;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	color: #bbb;
}

/* fixed navbar (applied dynamically if screen is wide enough) */
body.navfixed {
	margin-top: 57px;
}

body.navfixed .navbar-fixed-top  {
	position: fixed;
}

body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
}
/* end of fixed navbar */

#Logo {
	float: left;
	margin-top: 1px;
	margin-right: 5px;
	width: 88px;
	height: 36px;
	cursor: pointer;
	opacity: 1;
}

#Logo i,
#Logo i:hover {
	opacity: 1;
	filter: alpha(opacity=100);
}

.img-logo {
	background-position: -8px -139px;
	width: 88px;
	height: 38px;
	display: inline-block;
}

#PlayBlock {
	width: 70px;
	height: 38px;
	display: block;
	float: left;
	position: relative;
	z-index: 2;
}

#PlayButton,
#PauseButton,
#PlayPauseBg {
	width: 50px;
	height: 50px;
	position: absolute;
	padding: 0;
	z-index: 3;
}

.img-download-orange {
	background-position: -176px -80px;
}

.img-download-green {
	background-position: -112px -80px;
}

.img-download-bg {
	background-position: -240px -80px;
	width: 50px;
	height: 50px;
}

.PlayBlockInner {
	width: 38px;
	height: 38px;
	margin-left: 0px;
	margin-top: 0px;
	cursor: pointer;
	top: 6px;
	left: 6px;
	position: absolute;
	-webkit-border-radius: 18px;
	-moz-border-radius: 18px;
	border-radius: 18px;
}

.img-download-btn {
	background-position: -16px -80px;
	width: 21px;
	height: 21px;
	margin-left: 9px;
	margin-top: 8px;
}

.PlayBlockInner:hover .img-download-btn,
.PlayBlockInner:hover .img-download-btn {
	/* white */
	background-position: -16px -112px;
	opacity: 0.9;
}

#PlayCaretBlock {
	left: 37px;
	top: 1px;
	position: absolute;
}

#PlayCaretButton {
	border: 0;
	background: none;
	width: 24px;
	height: 22px;
	padding: 3px;
	line-height: 10px;
	vertical-align: top;
}

#PlayCaret {
	margin-top: 3px;
	margin-left: 9px;
	border-top-color: #ffffff;
	border-bottom-color: #ffffff;
	opacity: 0.75;
	filter: alpha(opacity=75);
}

#PlayCaretButton:hover #PlayCaret {
 	opacity: 1;
	filter: alpha(opacity=100);
}

@-webkit-keyframes play-rotate {
    0%   { -webkit-transform: rotate(0); }
    100% { -webkit-transform: rotate(360deg); }
}
@-moz-keyframes play-rotate {
    0%   { -moz-transform: rotate(0); }
    100% { -moz-transform: rotate(360deg); }
}
@-ms-keyframes play-rotate {
    0%   { -ms-transform: rotate(0); }
    100% { -ms-transform: rotate(360deg); }
}

#PlayAnimation {
	position: absolute;
	z-index: 4;
	left: -5px;
	top: -5px;
	-webkit-background-size: 70px 70px;
	-moz-background-size: 70px 70px;
	background-size: 70px 70px;
	background-position: center;
	width: 60px;
	height: 60px;
	cursor: pointer;
	pointer-events: none;
    -webkit-animation: play-rotate 1s linear infinite;
    -moz-animation: play-rotate 1s linear infinite;
    -ms-animation: play-rotate 1s linear infinite;
}

#PlayAnimation.play {
	background-image: url("./img/download-anim-green-2x.png");
}

#PlayAnimation.pause {
	background-image: url("./img/download-anim-orange-2x.png");
}

#InfoBlock {
	float: left;
	margin-right: 10px;
	padding-top: 2px;
	cursor: pointer;
	width: 86px;
}

#InfoBlock div {
	margin-top: 1px;
	font-size: 12px;
	font-weight: bold;
	margin: 0;
	padding: 0;
}

#InfoBlock div:hover {
	color: #fff;
}

#InfoBlock i {
	margin-right: 1px;
}

.navbar-inner i {
	opacity: 0.8;
	filter: alpha(opacity=80);
}

#InfoBlock div:hover i {
	opacity: 1;
	filter: alpha(opacity=100);
}

#StatusTime.scheduled-resume {
	color: #F08929;
}

#StatusTime.scheduled-resume:hover {
	color: #FFA15A;
}

.navbar-inner .btn:hover i {
	opacity: 1;
	filter: alpha(opacity=100);
}

#NavLinks {
	margin-right: 0;
}

.navbar-container {
	padding-left: 10px;
	padding-right: 10px;
}

.navbar .btn-group {
    padding: 0;
}

/* needed for Safari 4 */
.btn-toolbar .btn {
	height: 28px;
}

.navbar .nav {
	margin-right: 0;
}

.navbar .nav > li > a {
	color: inherit;
}
/* ... */

